First commit after almost two months of being idle. Cleaned up directory, updated jQuery and Raphael, cleaned index.html

--- a/style/images/colors.css
+++ b/style/images/colors.css
@@ -3,7 +3,11 @@ slider background: #a3cae0
 color: #1c4257
 
 /* Sliders */
-background: #a3cae0;
-background: #d7d7d7;
+background: #a3cae0
+
+;
+background: #d7d7d7
+
+;
 
 /* Sliders */
